--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
+    "dotenv": "8.2.0",
     "nuxt": "^2.14.7",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
